fix new line in index, link images to projects, make arrow more visible

--- a/css/projectpage.css
+++ b/css/projectpage.css
@@ -185,16 +185,16 @@
   position: absolute;
   top: 92vh;
   right: 50vw;
-  transform: scale(1.8) rotate(180deg);
-  animation: arrowdownmove 820ms infinite alternate;
+  transform: scale(2.25) rotate(180deg);
+  animation: arrowdownmove 810ms infinite alternate;
 }
 
 @keyframes arrowdownmove {
   0%{
-    transform: scale(1.8) rotate(180deg) translateY(0px);
+    transform: scale(2.25) rotate(180deg) translateY(0px);
   }
   100% {
-    transform: scale(1.8) rotate(180deg) translateY(4px);
+    transform: scale(2.25) rotate(180deg) translateY(4px);
   }
 }
 
